# ardopc

./: .gitignore  README.md  SECURITY.md  meson.build
.github/workflows/: main.yml  meson_test.yml
.oe5gze/: gplv3_src_header
debian/: ardopc.cron.d.ex  changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
man/: ardopc.1  meson.build
src/: ARDOPC.c  ARDOPC.h  ARQ.c  BusyDetect.c  CalcTemplates.c  DACout.c  FEC.c  HostInterface.c  KISSModule.c  LCM1602-IIC.c  LCM1602-IIC.h  LinSerial.c  Modulate.c  SCSHostInterface.c  SoundInput.c  TCPHostInterface.c  UZ7HOFEC.c  WinSerial.c  afskModule.c  ardopSampleArrays.c  i2cDisplay.c  libardop.c  main.c  main_linux.c  main_windows.c  meson.build  pktARDOP.c  pktSession.c
